log
Sun, May  4, 2025  9:35:15 AM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sun, May  4, 2025 10:50:25 AM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
20c82f0
Sun, May  4, 2025 10:54:00 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:79:13: error: implicit declaration of function 'is_equual' [-Werror=implicit-function-declaration]
         if (is_equual(tree, key, temp->pair->key) == 1) {
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
c191a58
